<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="layout.fragment_works">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backgroundImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    android:src="@drawable/home_background"/>

                <ImageView
                    android:id="@+id/backgroundColor"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/backgroundImage"
                    app:srcCompat="@android:color/holo_blue_light"/>

                <com.runzetang.myresume.CircleImageView
                    android:id="@+id/headImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignBottom="@id/backgroundImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-50dp"
                    android:src="@drawable/home_head"/>

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/headImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:text="@string/userName"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textName"
                    android:layout_centerHorizontal="true"
                    android:text="@string/userDescription"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/sectionImage1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/personImageMarginLeft"
                    android:layout_marginLeft="@dimen/personImageMarginLeft"
                    android:layout_marginTop="@dimen/personImageMarginTop"
                    app:srcCompat="@drawable/home_person"/>
                <TextView
                    android:id="@+id/sectionTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectionTitle1"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="24sp"
                    android:layout_below="@+id/sectionImage1"
                    android:layout_alignLeft="@id/sectionImage1"
                    android:layout_alignStart="@id/sectionImage1"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginStart="-10dp"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:id="@+id/section1Text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section1Text1"
                    android:layout_alignTop="@+id/sectionImage1"
                    android:layout_toEndOf="@+id/sectionImage1"
                    android:layout_toRightOf="@+id/sectionImage1"
                    android:layout_marginStart="@dimen/personTextMarginLeft"
                    android:layout_marginLeft="@dimen/personTextMarginLeft"
                    android:textColor="@color/colorPersonalDetail"/>
                <TextView
                    android:id="@+id/section1Text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section1Text2"
                    android:layout_below="@+id/section1Text1"
                    android:layout_alignLeft="@+id/section1Text1"
                    android:layout_alignStart="@+id/section1Text1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
                <TextView
                    android:id="@+id/section1Text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section1Text3"
                    android:layout_below="@+id/section1Text2"
                    android:layout_alignLeft="@+id/section1Text2"
                    android:layout_alignStart="@+id/section1Text2"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
                <TextView
                    android:id="@+id/section1Text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section1Text4"
                    android:layout_below="@+id/section1Text3"
                    android:layout_alignLeft="@+id/section1Text3"
                    android:layout_alignStart="@+id/section1Text3"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
                <TextView
                    android:id="@+id/section1Text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section1Text5"
                    android:layout_below="@+id/section1Text4"
                    android:layout_alignLeft="@+id/section1Text4"
                    android:layout_alignStart="@+id/section1Text4"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_bright"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/sectionImage2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/personImageMarginLeft"
                    android:layout_marginLeft="@dimen/personImageMarginLeft"
                    android:layout_marginTop="@dimen/personImageMarginTop"
                    app:srcCompat="@drawable/home_experience"/>
                <TextView
                    android:id="@+id/sectionTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectionTitle2"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="24sp"
                    android:layout_below="@+id/sectionImage2"
                    android:layout_alignLeft="@id/sectionImage2"
                    android:layout_alignStart="@id/sectionImage2"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:id="@+id/section2Text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section2Text1"
                    android:layout_alignTop="@+id/sectionImage2"
                    android:layout_toEndOf="@+id/sectionImage2"
                    android:layout_toRightOf="@+id/sectionImage2"
                    android:layout_marginStart="@dimen/personTextMarginLeft"
                    android:layout_marginLeft="@dimen/personTextMarginLeft"
                    android:textColor="@color/colorPersonalDetail"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/section2Text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section2Text2"
                    android:layout_below="@+id/section2Text1"
                    android:layout_alignLeft="@+id/section2Text1"
                    android:layout_alignStart="@+id/section2Text1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_bright"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/sectionImage3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/personImageMarginLeft"
                    android:layout_marginLeft="@dimen/personImageMarginLeft"
                    android:layout_marginTop="@dimen/personImageMarginTop"
                    app:srcCompat="@drawable/home_skills"/>
                <TextView
                    android:id="@+id/sectionTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectionTitle3"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="24sp"
                    android:layout_below="@+id/sectionImage3"
                    android:layout_alignLeft="@id/sectionImage3"
                    android:layout_alignStart="@id/sectionImage3"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:id="@+id/section3Text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section3Text1"
                    android:layout_alignTop="@+id/sectionImage3"
                    android:layout_toEndOf="@+id/sectionImage3"
                    android:layout_toRightOf="@+id/sectionImage3"
                    android:layout_marginStart="@dimen/personTextMarginLeft"
                    android:layout_marginLeft="@dimen/personTextMarginLeft"
                    android:textColor="@color/colorPersonalDetail"
                    android:layout_marginTop="0dp"/>
                <TextView
                    android:id="@+id/section3Text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section3Text2"
                    android:layout_below="@+id/section3Text1"
                    android:layout_alignLeft="@+id/section3Text1"
                    android:layout_alignStart="@+id/section3Text1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
                <TextView
                    android:id="@+id/section3Text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section3Text3"
                    android:layout_below="@+id/section3Text2"
                    android:layout_alignLeft="@+id/section3Text2"
                    android:layout_alignStart="@+id/section3Text2"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPersonalDetail"/>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        </LinearLayout>


    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
