<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.fragment_works">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/works1"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/HalfBlack"
            android:text="@string/worksText1"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/works2"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/HalfBlack"
            android:text="@string/worksText2"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/works3"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/HalfBlack"
            android:text="@string/worksText3"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/works4"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/HalfBlack"
            android:text="@string/worksText4"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"/>
    </android.support.v7.widget.CardView>
</LinearLayout>

</ScrollView>
