<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="layout.fragment_contact">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/contact_background">

        <com.runzetang.myresume.CircleImageView
            android:id="@+id/contact_Head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/home_head"/>

        <TextView
            android:id="@+id/contact_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/contact_Head"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/contact_Head"
            android:layout_toRightOf="@+id/contact_Head"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/userName"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/contact_ViceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contact_Head"
            android:layout_alignLeft="@+id/contact_Title"
            android:layout_alignStart="@+id/contact_Title"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:text="@string/contactViceTitle"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="vertical"
        android:padding="6dp">
        <!-- QQ -->
        <com.runzetang.myresume.TextDrawable
            android:id="@+id/contact1"
            android:layout_width="@dimen/contactTextWidth"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="0"
            android:drawablePadding="@dimen/contactTextDrawablePadding"
            android:paddingTop="@dimen/contactTextPadding"
            android:paddingBottom="@dimen/contactTextPadding"
            android:paddingLeft="@dimen/contactTextPaddingLeft"
            android:text="QQ"
            android:textSize="@dimen/contactTextSize"
            app:leftDrawable="@drawable/icon_qq"
            app:leftDrawableHeight="@dimen/contactTextDrawableSize"
            app:leftDrawableWidth="@dimen/contactTextDrawableSize"/>

        <TextView
            android:id="@+id/contact1_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_row="0"
            android:text="@string/valueQQ"
            android:textSize="@dimen/contactTextSize"/>
        <Button
            android:id="@+id/contact1_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="Contact1btn_OnClick"
            android:text="加好友"/>


        <!-- 微博 -->
        <com.runzetang.myresume.TextDrawable
            android:id="@+id/contact2"
            android:layout_width="@dimen/contactTextWidth"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="1"
            android:drawablePadding="@dimen/contactTextDrawablePadding"
            android:paddingTop="@dimen/contactTextPadding"
            android:paddingBottom="@dimen/contactTextPadding"
            android:paddingLeft="@dimen/contactTextPaddingLeft"
            android:text="微博"
            android:textSize="@dimen/contactTextSize"
            app:leftDrawable="@drawable/icon_weibo"
            app:leftDrawableHeight="@dimen/contactTextDrawableSize"
            app:leftDrawableWidth="@dimen/contactTextDrawableSize"/>
        <TextView
            android:id="@+id/contact2_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_row="1"
            android:text="@string/contact_weibo"
            android:textSize="@dimen/contactTextSize"/>
        <Button
            android:id="@+id/contact2_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="Contact2btn_OnClick"
            android:text="关注我"/>

        <!-- 微信 -->
        <com.runzetang.myresume.TextDrawable
            android:id="@+id/contact3"
            android:layout_width="@dimen/contactTextWidth"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="2"
            android:drawablePadding="@dimen/contactTextDrawablePadding"
            android:paddingTop="@dimen/contactTextPadding"
            android:paddingBottom="@dimen/contactTextPadding"
            android:paddingLeft="@dimen/contactTextPaddingLeft"
            android:text="微信"
            android:textSize="@dimen/contactTextSize"
            app:leftDrawable="@drawable/icon_wechat"
            app:leftDrawableHeight="@dimen/contactTextDrawableSize"
            app:leftDrawableWidth="@dimen/contactTextDrawableSize"/>

        <TextView
            android:id="@+id/contact3_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_row="2"
            android:text="@string/contact_weixin"
            android:textSize="@dimen/contactTextSize"/>

        <!-- 邮箱 -->
        <com.runzetang.myresume.TextDrawable
            android:id="@+id/contact4"
            android:layout_width="@dimen/contactTextWidth"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="3"
            android:drawablePadding="@dimen/contactTextDrawablePadding"
            android:paddingTop="@dimen/contactTextPadding"
            android:paddingBottom="@dimen/contactTextPadding"
            android:paddingLeft="@dimen/contactTextPaddingLeft"
            android:text="邮箱"
            android:textSize="@dimen/contactTextSize"
            app:leftDrawable="@drawable/icon_mail"
            app:leftDrawableHeight="@dimen/contactTextDrawableSize"
            app:leftDrawableWidth="@dimen/contactTextDrawableSize"/>

        <TextView
            android:id="@+id/contact4_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_row="3"
            android:autoLink="email"
            android:text="@string/contact_mail"
            android:textSize="@dimen/contactTextSize"
            android:layout_columnSpan="2"/>

        <!-- 电话 -->
        <com.runzetang.myresume.TextDrawable
            android:id="@+id/contact5"
            android:layout_width="@dimen/contactTextWidth"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="4"
            android:drawablePadding="@dimen/contactTextDrawablePadding"
            android:paddingTop="@dimen/contactTextPadding"
            android:paddingBottom="@dimen/contactTextPadding"
            android:paddingLeft="@dimen/contactTextPaddingLeft"
            android:text="手机"
            android:textSize="@dimen/contactTextSize"
            app:leftDrawable="@drawable/icon_tel"
            app:leftDrawableHeight="@dimen/contactTextDrawableSize"
            app:leftDrawableWidth="@dimen/contactTextDrawableSize"/>

        <TextView
            android:id="@+id/contact5_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_row="4"
            android:autoLink="phone"
            android:text="@string/contact_tel"
            android:textSize="@dimen/contactTextSize"/>

        <!-- Github-->
        <com.runzetang.myresume.TextDrawable
            android:id="@+id/contact6"
            android:layout_width="@dimen/contactTextWidth"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="5"
            android:drawablePadding="@dimen/contactTextDrawablePadding"
            android:paddingTop="@dimen/contactTextPadding"
            android:paddingBottom="@dimen/contactTextPadding"
            android:paddingLeft="@dimen/contactTextPaddingLeft"
            android:text="Github"
            android:textSize="@dimen/contactTextSize"
            app:leftDrawable="@drawable/icon_github"
            app:leftDrawableHeight="@dimen/contactTextDrawableSize"
            app:leftDrawableWidth="@dimen/contactTextDrawableSize"/>

        <TextView
            android:id="@+id/contact6_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="start"
            android:layout_row="5"
            android:autoLink="web"
            android:text="@string/contact_github"
            android:textSize="@dimen/contactTextSize"/>

    </GridLayout>


</LinearLayout>
</ScrollView>